# fluke

./: Cargo.toml  LICENSE  README.md  clippy.toml  default.nix  lix.patch  shell.nix
npins/: sources.json
proptest-regressions/: lib.txt
src/: cache.rs  impurity.rs  lib.rs  main.rs  utils.rs  watchman.rs
tests/: cache-invalidation.proptest-regressions  cache-invalidation.rs  cli.rs  expr.nix
tests/util/: mod.rs
