[package]
name = "fluke"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive", "string"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
hex = "0.4.3"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
tempfile = "3.26.0"
test-log = { version = "0.2.19", default-features = false, features = ["trace"] }
tokio = "1.50.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
watchman_client = "0.9.0"
xdg = "3.0.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
proptest = "1.10.0"
proptest-state-machine = "0.6.0"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
